--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 
 
-    <meta property="og:title" content="Al-Mamun Sarkar ">
+    <meta property="og:title" content="Md.Zweel Mia ">
     <meta property="og:description" content="Professional Software Engineer and Big Fan of Machine Learning, Mathemetics, Statistics.">
-    <meta property="og:image" content="img/mamun.jpg">
+    <meta property="og:image" content="img/jewel.jpg">
 
-    <meta name="twitter:title" content="Al-Mamun Sarkar">
+    <meta name="twitter:title" content="Md.Zweel Mia">
     <meta name="twitter:description" content="Professional Software Engineer and Big Fan of Machine Learning, Mathemetics, Statistics.">
-    <meta name="twitter:image" content="img/mamun.jpg">
-    <meta name="twitter:card" content="img/mamun.jpg">
+    <meta name="twitter:image" content="img/jewel.jpg">
+    <meta name="twitter:card" content="img/jewel.jpg">
 
 
 
